Fix wrong padding on navigation when in card header (#49)

--- a/src/scss/src/components/_card.scss
+++ b/src/scss/src/components/_card.scss
@@ -106,6 +106,10 @@
 /** With navigation */
 .card__header .nav {
   margin-left: $spacing-small;
+
+  > ul {
+    padding: 0;
+  }
 }
 
 /** No gutter */
